# CSCE605-PL605

./: CMakeLists.txt  Makefile  README.md  a.out  main.c  main.cpp  readme.md
IR/: CMakeLists.txt  IR.cpp  IR.h  SSA.cpp  SSA.h  codegen.cpp  codegen.h  symbolTable.cpp  symbolTable.h
backend/: CMakeLists.txt  dlxgen.cpp  dlxgen.h  regalloc.cpp  regalloc.h
frontend/: CMakeLists.txt  parser.c  parser.cpp  parser.h  scanner.c  scanner.cpp  scanner.h
graphviz/: CMakeLists.txt  Dot.cpp  Dot.h  graphviz.cpp  graphviz.h
optimization/: CMakeLists.txt  arithsim.cpp  arithsim.h  constfold.cpp  constfold.h  orphanfunc.cpp  orphanfunc.h
runtime/: DLX.java  TestCompiler.java
src/: Makefile  main.c  scanner.c  scanner.h
tests/: data.txt  test-arithsim.txt  test-constfold.txt  test-orphanfunc.txt  test0.605  test000.txt  test000.txt-CFG.dot  test000.txt-LVA.dot  test000.txt-deSSA.dot  test000.txt.dlx  test001a.txt  test002.txt  test003.txt  test003.txt-CFG.dot  test003.txt-LVA.dot  test003.txt-SSA.dot  test003.txt-deSSA.dot  test003.txt.dlx  test008.txt  test008a.txt  test017.txt  test018.txt  test020.txt  test026.txt  test035.txt
tests/basic_features/: basic000.txt-CFG.dot  basic000.txt-LVA.dot  basic000.txt-deSSA.dot  basic000.txt-regAlloc.dot  basic000.txt.dlx  basic001.txt  basic001.txt-CFG.dot  basic001.txt-LVA.dot  basic001.txt-deSSA.dot  basic001.txt-regAlloc.dot  basic001.txt.dlx  basic003.txt-CFG.dot  basic003.txt-LVA.dot  basic003.txt-SSA.dot  basic003.txt-deSSA.dot  basic003.txt-regAlloc.dot  basic003.txt.dlx  basic004.txt-CFG.dot  basic004.txt-LVA.dot  basic004.txt-deSSA.dot  basic004.txt-regAlloc.dot  basic004.txt.dlx  basic005.txt-CFG.dot  basic005.txt-LVA.dot  basic005.txt-SSA.dot  basic005.txt-regAlloc.dot  basic005.txt.dlx  basic006.txt-CFG.dot  basic006.txt-LVA.dot  basic006.txt-SSA.dot  basic006.txt-deSSA.dot  basic006.txt-regAlloc.dot  basic007.txt-CFG.dot  basic007.txt-SSA.dot  basic008.txt  basic008.txt-CFG.dot  basic008.txt-SSA.dot  basic009.txt-CFG.dot  basic009.txt-LVA.dot  basic009.txt-SSA.dot  (+13 more)
